# backend-assessment

./: README.md  pyproject.toml
blog/: db.sqlite3
blog/api/: models.py  serializer.py  urls.py  views.py
blog/api/migrations/: 0001_initial.py  0002_alter_post_author.py  0003_auto_20210816_0052.py  0004_alter_post_authorid.py  0005_auto_20210816_0105.py
blog/blog/: settings.py  urls.py
blog/templates/api/: base.html  blog.html
