[tool.poetry]
name = "django-rest-api"
version = "0.1.0"
description = ""
authors = ["Samuel Clark <samuelclark907@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
requests = "^2.26.0"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
